gccida/g2/finish_eh_generation
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/finish_eh_generation/src/except.c:3019:1: error: must use 'enum' tag to refer to type 'eh_region_type'
eh_region_type type; // eax 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/finish_eh_generation/src/except.c:3022:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v17; // rax 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/finish_eh_generation/src/except.c:3031:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v26; // r12d 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/finish_eh_generation/src/except.c:3058:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v53; // ebx 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/finish_eh_generation/src/except.c:3064:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v59; // rax 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/finish_eh_generation/src/except.c:3114:22: error: use of undeclared identifier 'machine_mode'
v60 = gen_reg_rtx( ( machine_mode)( ( ( BYTE3( target_flags) & 2) != 0) + 4)); 
                     ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/finish_eh_generation/src/except.c:3122:42: error: invalid suffix 'xmode' on integer constant
v3->eh->filter = gen_reg_rtx( *(short *)0xmode); 
                                         ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/finish_eh_generation/src/except.c:3129:14: error: expected identifier or '('
 struct htab = htab_create( 0x1FuLL, ehspec_filter_hash, ehspec_filter_eq, free); 
             ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/finish_eh_generation/src/except.c:3314:18: error: invalid suffix 'xmode' on integer constant
v53 = *(short *)0xmode; 
                 ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/finish_eh_generation/src/except.c:3349:18: error: invalid suffix 'xmode' on integer constant
v26 = *(short *)0xmode; 
                 ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/finish_eh_generation/src/except.c:3468:22: error: use of undeclared identifier 'machine_mode'
v43 = gen_rtx_REG( ( machine_mode)( ( ( BYTE3( target_flags) & 2) != 0) + 4), v41); 
                     ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/finish_eh_generation/src/except.c:3482:22: error: use of undeclared identifier 'machine_mode'
v45 = gen_rtx_REG( ( machine_mode)( ( ( BYTE3( target_flags) & 2) != 0) + 4), 0); 
                     ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/finish_eh_generation/src/except.c:3484:31: error: invalid suffix 'xmode' on integer constant
v46 = gen_rtx_REG( *(short *)0xmode, 1); 
                              ^
13 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/finish_eh_generation/src/obj/except.o] Error 1
